--- a/index.html
+++ b/index.html
@@ -27,8 +27,16 @@
         <button onclick="Search()" id="searchbutton">Search</button>
         </div>
     </div>
-    <h2 id="name">Search A Username...</h2>
     <div id="results">
+        <br>
+        <div class="profilegit">
+            <img id="pfp" src="/" alt="" width="100">
+            <h2 id="nameu"></h2>
+            <p id="uname"></p>
+            <p id="desc"></p>
+            <p id="create"></p>
+        </div>
+        <h2 id="name">Search A Username...</h2>
         <iframe id="stat" src="https://github-readme-stats.vercel.app/api?username=simplystudios&theme=react&show_icons=true&hide_border=true&count_private=true"
             title="W3Schools Free Online Web Tutorials"></iframe>
         <iframe id="streak" src="https://streak-stats.demolab.com?user=simplystudios&theme=react&show_icons=true&hide_border=true&count_private=true"
