--- a/index.html
+++ b/index.html
@@ -8,14 +8,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+    <meta name="name" content="Github &bull; Stats Viewer">
+    <meta name="description" content="Search anyone's github stats">
+    <meta name="keywords"
+        content="github, stats github, github stats, my github,streak-stats, github-readme-stats">
+    <meta name="theme-color" content="#101010">
+    
+    <meta property="og:title" content="Github &bull; Stats Viewer">
+    <meta property="og:url" content="https://gh-stats-viewer.vercel.app/">
+    <meta property="og:image" content="images/1f4ca.png">
+    <meta property="og:description" content="Search anyones github stats">
+    
+    <meta name="twitter:title" content="Github &bull; Stats Viewer">
+    <meta name="twitter:description" content="Search github stats of anyone...">
+    <meta name="twitter:image" content="/images/1f4ca.png">
+    <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
 <!-- https://www.reddit.com/r/IndianDankMemes/comments/164jkwj/sudhar_jao_ye_ye_kya_hai/ -->
     <div class="heading">
         <div class="textstuff">
             <div class="gif">
-                <img class="statimg" src="https://raw.githubusercontent.com/Tarikul-Islam-Anik/Animated-Fluent-Emojis/master/Emojis/Objects/Bar%20Chart.png"
-                    alt="Bar Chart" width="40" height="40" />
+                <img class="statimg" src="/images/1f4ca.png" alt="" width="35px">
                 <h2>Github Stats Viewer</h2>
             </div>
             <p>Thanks to github-readme-stats & streak-stats</p>
@@ -38,12 +53,12 @@
         </div>
         <h2 id="name">Search A Username...</h2>
         <iframe id="stat" src="https://github-readme-stats.vercel.app/api?username=simplystudios&theme=react&show_icons=true&hide_border=true&count_private=true"
-            title="W3Schools Free Online Web Tutorials"></iframe>
+            title="github stats"></iframe>
         <iframe id="streak" src="https://streak-stats.demolab.com?user=simplystudios&theme=react&show_icons=true&hide_border=true&count_private=true"
-            title="W3Schools Free Online Web Tutorials"></iframe>
+            title="github stats"></iframe>
         <iframe id="languse"
             src="https://github-readme-stats.vercel.app/api/top-langs/?username=simplystudios&theme=react&show_icons=true&hide_border=true&layout=compact"
-            title="W3Schools Free Online Web Tutorials"></iframe>
+            title="github stats"></iframe>
     </div>
 </body>
 <script src="app.js"></script>
