--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <meta property="og:title" content="Github &bull; Stats">
     <meta property="og:url" content="https://gh-stats-viewer.vercel.app">
-    <meta property="og:image" content="https://gh-stats-viewer.vercel.app/images/1f4ca.png">
+    <meta property="og:image" content="./images/1f4ca.png">
     <meta property="og:description" content="Search anyone's github stats">
 
     <meta name="name" content="Github &bull; Stats Viewer">
@@ -22,7 +22,7 @@
     
     <meta name="twitter:title" content="Github &bull; Stats Viewer">
     <meta name="twitter:description" content="Search github stats of anyone...">
-    <meta name="twitter:image" content="https://gh-stats-viewer.vercel.app/images/githubstatsposter.png">
+    <meta name="twitter:image" content="./images/githubstatsposter.png">
     <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
