--- a/index.html
+++ b/index.html
@@ -77,17 +77,20 @@
         <nav class="footer-nav">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/">Github</a></li>
-                <li><a href="/about">Twitter</a></li>
-                <li><a href="/contact">Peerlist</a></li>
+                <li><a href="https://github.com/simplystudios">Github</a></li>
+                <li><a href="https://twitter.com/anshwadhwa8">Twitter</a></li>
+                <li><a href="https://peerlist.io/anshwadhwa">Peerlist</a></li>
             </ul>
         </nav>
         <br>
         <div class="social-icons">
-            <a href="https://github.com/simplystudios/hinduwiki"><i class="fab fa-github"></i></a>
-            <a href="https://twitter.com/hinduwiki"><i class="fa-brands fa-x-twitter"></i></a>
+            <a href="https://github.com/simplystudios/"><i class="fab fa-github"></i></a>
+            <a href="https://twitter.com/anshwadhwa8"><i class="fa-brands fa-x-twitter"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
         </div>
+        <br>
+        <a href="https://anshwadhwa.vercel.app">Ansh Wadhwa @ 2023</a>
+        <br>
     <br>
     </footer>
 </body>
